Fix inconsistent font weight in PR "Commits" tab
This tab has lighter fonts then the other three:
"Conversation", "Checks", "Files Changed"

There's more misalignment/inconsistency above those tabs for that
"Commits" tab only.

--- a/github-classic.user.css
+++ b/github-classic.user.css
@@ -18,6 +18,7 @@
         --color-primer-border-active: #58a6ff !important;
         --underlineNav-borderColor-active: #58a6ff !important;
         --monospace-font: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
+        --base-text-weight-light: 500;
     }
 
 
